Assertion failure: !mIsBackup, at /builds/worker/checkouts/gecko/netwerk/protocol/http/DnsAndConnectSocket.cpp:1229
Categories
(Core :: Networking: HTTP, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox113 | --- | unaffected |
| firefox114 | --- | wontfix |
| firefox115 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: kershaw)
References
(Regression)
Details
(Keywords: assertion, intermittent-failure, regression, Whiteboard: [retriggered][necko-triaged][necko-priority-review])
Attachments
(1 file)
Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=413131445&repo=try
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/eiACPkM6TJaj7ksuXEkSCg/runs/0/artifacts/public/logs/live_backing.log
[task 2023-04-20T12:13:36.816Z] 12:13:36 INFO - TEST-PASS | netwerk/test/unit/test_http3_server.js | testHttp3ServerAsReverseProxy - [testHttp3ServerAsReverseProxy : 1] Checking status - 0 == 0
[task 2023-04-20T12:13:36.817Z] 12:13:36 INFO - PID 6848 | console.error: (new Error("Unexpected content-type \\"text/plain;charset=US-ASCII\\"", "resource://services-settings/Utils.sys.mjs", 399))
[task 2023-04-20T12:13:36.817Z] 12:13:36 INFO - PID 6848 | Assertion failure: !mIsBackup, at /builds/worker/checkouts/gecko/netwerk/protocol/http/DnsAndConnectSocket.cpp:1229
[task 2023-04-20T12:13:36.851Z] 12:13:36 INFO - Initializing stack-fixing for the first stack frame, this may take a while...
[task 2023-04-20T12:13:57.821Z] 12:13:57 INFO - PID 6848 | #01: mozilla::net::DnsAndConnectSocket::TransportSetup::SetupStreams(mozilla::net::DnsAndConnectSocket*) [netwerk/protocol/http/DnsAndConnectSocket.cpp:1229]
[task 2023-04-20T12:13:57.822Z] 12:13:57 INFO - PID 6848 | #02: mozilla::net::DnsAndConnectSocket::TransportSetup::OnLookupComplete(mozilla::net::DnsAndConnectSocket*, nsIDNSRecord*, nsresult) [netwerk/protocol/http/DnsAndConnectSocket.cpp:1352]
[task 2023-04-20T12:13:57.822Z] 12:13:57 INFO - PID 6848 | #03: mozilla::net::DnsAndConnectSocket::OnLookupComplete(nsICancelable*, nsIDNSRecord*, nsresult) [netwerk/protocol/http/DnsAndConnectSocket.cpp:464]
[task 2023-04-20T12:13:57.823Z] 12:13:57 INFO - PID 6848 | #04: mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/netwerk/dns/DNSListenerProxy.cpp:28:30'>::Run() [xpcom/threads/nsThreadUtils.h:548]
[task 2023-04-20T12:13:57.823Z] 12:13:57 INFO - PID 6848 | #05: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1245]
[task 2023-04-20T12:13:57.823Z] 12:13:57 INFO - PID 6848 | #06: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:479]
[task 2023-04-20T12:13:57.823Z] 12:13:57 INFO - PID 6848 | #07: mozilla::net::nsSocketTransportService::Run() [netwerk/base/nsSocketTransportService2.cpp:1201]
[task 2023-04-20T12:13:57.824Z] 12:13:57 INFO - PID 6848 | #08: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1245]
[task 2023-04-20T12:13:57.824Z] 12:13:57 INFO - PID 6848 | #09: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:479]
[task 2023-04-20T12:13:57.824Z] 12:13:57 INFO - PID 6848 | #10: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:300]
[task 2023-04-20T12:13:57.824Z] 12:13:57 INFO - PID 6848 | #11: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:369]
[task 2023-04-20T12:13:57.825Z] 12:13:57 INFO - PID 6848 | #12: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:363]
[task 2023-04-20T12:13:57.825Z] 12:13:57 INFO - PID 6848 | #13: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:345]
[task 2023-04-20T12:13:57.826Z] 12:13:57 INFO - PID 6848 | #14: nsThread::ThreadFunc(void*) [xpcom/threads/nsThread.cpp:393]
[task 2023-04-20T12:13:58.000Z] 12:13:58 INFO - PID 6848 | #15: _PR_NativeRunThread(void*) [nsprpub/pr/src/threads/combined/pruthr.c:399]
[task 2023-04-20T12:13:58.001Z] 12:13:58 INFO - PID 6848 | #16: pr_root(void*) [nsprpub/pr/src/md/windows/w95thred.c:139]
[task 2023-04-20T12:13:58.004Z] 12:13:58 INFO - fix-stacks: error: failed to read debug info file `ucrtbase.pdb` for `C:\\Windows\\System32\\ucrtbase.dll`
[task 2023-04-20T12:13:58.004Z] 12:13:58 INFO - fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-04-20T12:13:58.004Z] 12:13:58 INFO - fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-04-20T12:13:58.004Z] 12:13:58 INFO - PID 6848 | #17: time32 [C:\\Windows\\System32\\ucrtbase.dll + 0x459d3]
[task 2023-04-20T12:13:58.007Z] 12:13:58 INFO - fix-stacks: error: failed to read debug info file `wkernel32.pdb` for `C:\\Windows\\System32\\KERNEL32.DLL`
[task 2023-04-20T12:13:58.007Z] 12:13:58 INFO - fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-04-20T12:13:58.007Z] 12:13:58 INFO - fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-04-20T12:13:58.007Z] 12:13:58 INFO - PID 6848 | #18: BaseThreadInitThunk [C:\\Windows\\System32\\KERNEL32.DLL + 0x17d69]
[task 2023-04-20T12:13:58.099Z] 12:13:58 INFO - PID 6848 | #19: DllBlocklist_Initialize [Z:\\task_168198890360245\\build\\application\\firefox\\mozglue.dll + 0x7d667]
[task 2023-04-20T12:13:58.103Z] 12:13:58 INFO - fix-stacks: error: failed to read debug info file `wntdll.pdb` for `C:\\Windows\\SYSTEM32\\ntdll.dll`
[task 2023-04-20T12:13:58.103Z] 12:13:58 INFO - fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-04-20T12:13:58.104Z] 12:13:58 INFO - fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-04-20T12:13:58.104Z] 12:13:58 INFO - PID 6848 | #20: RtlInitializeExceptionChain [C:\\Windows\\SYSTEM32\\ntdll.dll + 0x6bb9b]
[task 2023-04-20T12:13:58.104Z] 12:13:58 INFO - PID 6848 | #21: RtlClearBits [C:\\Windows\\SYSTEM32\\ntdll.dll + 0x6bb1f]
[task 2023-04-20T12:13:58.104Z] 12:13:58 INFO - <<<<<<<
[task 2023-04-20T12:14:07.903Z] 12:14:07 WARNING - PROCESS-CRASH | netwerk/test/unit/test_http3_server.js | application crashed [@ mozilla::net::DnsAndConnectSocket::TransportSetup::SetupStreams]
[task 2023-04-20T12:14:07.904Z] 12:14:07 INFO - Mozilla crash reason: MOZ_ASSERT(!mIsBackup)
[task 2023-04-20T12:14:07.904Z] 12:14:07 INFO - Crash dump filename: C:\Users\task_168198890360245\AppData\Local\Temp\xpc-other-x8ddtn_z\1a8fcd2f-c3d5-461b-b913-e5abbf398bcd.dmp
[task 2023-04-20T12:14:07.904Z] 12:14:07 INFO - Operating system: Windows NT
[task 2023-04-20T12:14:07.904Z] 12:14:07 INFO - 10.0.22621
[task 2023-04-20T12:14:07.905Z] 12:14:07 INFO - CPU: x86
[task 2023-04-20T12:14:07.905Z] 12:14:07 INFO - GenuineIntel family 6 model 106 stepping 6
[task 2023-04-20T12:14:07.905Z] 12:14:07 INFO - 8 CPUs
[task 2023-04-20T12:14:07.905Z] 12:14:07 INFO - Crash reason: EXCEPTION_BREAKPOINT
[task 2023-04-20T12:14:07.905Z] 12:14:07 INFO - Crash address: 0x66226300
[task 2023-04-20T12:14:07.905Z] 12:14:07 INFO - Process uptime: 1 seconds
[task 2023-04-20T12:14:07.906Z] 12:14:07 INFO - Thread 9 Socket Thread (crashed)
[task 2023-04-20T12:14:07.906Z] 12:14:07 INFO - 0 xul.dll!mozilla::net::DnsAndConnectSocket::TransportSetup::SetupStreams(mozilla::net::DnsAndConnectSocket*) [DnsAndConnectSocket.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 1229 + 0x0]
[task 2023-04-20T12:14:07.906Z] 12:14:07 INFO - eip = 0x66226300 esp = 0x0efff488 ebp = 0x0efff514 ebx = 0x10b5b240
[task 2023-04-20T12:14:07.906Z] 12:14:07 INFO - esi = 0x10b243a0 edi = 0x00000020 eax = 0x711f3a04 ecx = 0x00000000
[task 2023-04-20T12:14:07.906Z] 12:14:07 INFO - edx = 0x0effe935 eflags = 0x00000206
[task 2023-04-20T12:14:07.907Z] 12:14:07 INFO - Found by: given as instruction pointer in context
[task 2023-04-20T12:14:07.907Z] 12:14:07 INFO - 1 xul.dll!mozilla::net::DnsAndConnectSocket::TransportSetup::OnLookupComplete(mozilla::net::DnsAndConnectSocket*, nsIDNSRecord*, nsresult) [DnsAndConnectSocket.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 1352 + 0x7]
[task 2023-04-20T12:14:07.907Z] 12:14:07 INFO - eip = 0x66223429 esp = 0x0efff51c ebp = 0x0efff53c ebx = 0x00000000
[task 2023-04-20T12:14:07.907Z] 12:14:07 INFO - esi = 0x10b243a0 edi = 0x00000000
[task 2023-04-20T12:14:07.908Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.908Z] 12:14:07 INFO - 2 xul.dll!mozilla::net::DnsAndConnectSocket::OnLookupComplete(nsICancelable*, nsIDNSRecord*, nsresult) [DnsAndConnectSocket.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 464 + 0xf]
[task 2023-04-20T12:14:07.908Z] 12:14:07 INFO - eip = 0x66223147 esp = 0x0efff544 ebp = 0x0efff578 ebx = 0x10b24300
[task 2023-04-20T12:14:07.908Z] 12:14:07 INFO - esi = 0x0fc1c810 edi = 0x10b2431c
[task 2023-04-20T12:14:07.909Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.909Z] 12:14:07 INFO - 3 xul.dll!mozilla::net::DNSListenerProxy::OnLookupComplete::<lambda_1>::operator()() const [DNSListenerProxy.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 29]
[task 2023-04-20T12:14:07.909Z] 12:14:07 INFO - Found by: inlining
[task 2023-04-20T12:14:07.909Z] 12:14:07 INFO - 4 xul.dll!mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/netwerk/dns/DNSListenerProxy.cpp:28:30'>::Run() [nsThreadUtils.h:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 548 + 0x35]
[task 2023-04-20T12:14:07.910Z] 12:14:07 INFO - eip = 0x65ee2552 esp = 0x0efff580 ebp = 0x0efff5a4 ebx = 0x129e5190
[task 2023-04-20T12:14:07.910Z] 12:14:07 INFO - esi = 0x129fda80 edi = 0x10b2431c
[task 2023-04-20T12:14:07.911Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.911Z] 12:14:07 INFO - 5 xul.dll!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 1233 + 0xd]
[task 2023-04-20T12:14:07.911Z] 12:14:07 INFO - eip = 0x65c5f6d7 esp = 0x0efff5ac ebp = 0x0efff69c ebx = 0x07218560
[task 2023-04-20T12:14:07.911Z] 12:14:07 INFO - esi = 0x129fda80 edi = 0x07218480
[task 2023-04-20T12:14:07.911Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.912Z] 12:14:07 INFO - 6 xul.dll!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 479 + 0x15]
[task 2023-04-20T12:14:07.912Z] 12:14:07 INFO - eip = 0x65c65682 esp = 0x0efff6a4 ebp = 0x0efff6c0 ebx = 0x00000001
[task 2023-04-20T12:14:07.912Z] 12:14:07 INFO - esi = 0x07218480 edi = 0x0efff6c4
[task 2023-04-20T12:14:07.912Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.913Z] 12:14:07 INFO - 7 xul.dll!mozilla::net::nsSocketTransportService::Run() [nsSocketTransportService2.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 1201 + 0x9]
[task 2023-04-20T12:14:07.913Z] 12:14:07 INFO - eip = 0x65e68d6c esp = 0x0efff6c8 ebp = 0x0efff994 ebx = 0x072a7e10
[task 2023-04-20T12:14:07.913Z] 12:14:07 INFO - esi = 0x0efff6d0 edi = 0x0efff6c4
[task 2023-04-20T12:14:07.913Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.914Z] 12:14:07 INFO - 8 xul.dll!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 1233 + 0xd]
[task 2023-04-20T12:14:07.914Z] 12:14:07 INFO - eip = 0x65c5f6d7 esp = 0x0efff99c ebp = 0x0efffa90 ebx = 0x07218560
[task 2023-04-20T12:14:07.914Z] 12:14:07 INFO - esi = 0x072a7e10 edi = 0x07218480
[task 2023-04-20T12:14:07.914Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.914Z] 12:14:07 INFO - 9 xul.dll!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 479 + 0x15]
[task 2023-04-20T12:14:07.915Z] 12:14:07 INFO - eip = 0x65c65682 esp = 0x0efffa98 ebp = 0x0efffab4 ebx = 0x00000000
[task 2023-04-20T12:14:07.915Z] 12:14:07 INFO - esi = 0x07218480 edi = 0x0efffb8c
[task 2023-04-20T12:14:07.915Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.915Z] 12:14:07 INFO - 10 xul.dll!mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [MessagePump.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 300 + 0x9]
[task 2023-04-20T12:14:07.916Z] 12:14:07 INFO - eip = 0x665e2bef esp = 0x0efffabc ebp = 0x0efffae8 ebx = 0x665778c0
[task 2023-04-20T12:14:07.916Z] 12:14:07 INFO - esi = 0x0efffad4 edi = 0x0efffb8c
[task 2023-04-20T12:14:07.916Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.916Z] 12:14:07 INFO - 11 xul.dll!MessageLoop::RunInternal() [message_loop.cc:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 369 + 0x10]
[task 2023-04-20T12:14:07.916Z] 12:14:07 INFO - eip = 0x66576a63 esp = 0x0efffaf0 ebp = 0x0efffb14 ebx = 0x665e2b50
[task 2023-04-20T12:14:07.916Z] 12:14:07 INFO - esi = 0x0efffb8c edi = 0x0ee3f220
[task 2023-04-20T12:14:07.917Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.917Z] 12:14:07 INFO - 12 xul.dll!MessageLoop::RunHandler() [message_loop.cc:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 362 + 0x6]
[task 2023-04-20T12:14:07.917Z] 12:14:07 INFO - eip = 0x66576963 esp = 0x0efffb1c ebp = 0x0efffb48 ebx = 0x0000000d
[task 2023-04-20T12:14:07.917Z] 12:14:07 INFO - esi = 0x0efffb8c edi = 0x0efffb8c
[task 2023-04-20T12:14:07.917Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.918Z] 12:14:07 INFO - 13 xul.dll!MessageLoop::Run() [message_loop.cc:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 344 + 0x4]
[task 2023-04-20T12:14:07.919Z] 12:14:07 INFO - eip = 0x66576826 esp = 0x0efffb50 ebp = 0x0efffb68 ebx = 0x0000000d
[task 2023-04-20T12:14:07.919Z] 12:14:07 INFO - esi = 0x07218480 edi = 0x0efffb8c
[task 2023-04-20T12:14:07.919Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.919Z] 12:14:07 INFO - 14 xul.dll!nsThread::ThreadFunc(void*) [nsThread.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 391 + 0x6]
[task 2023-04-20T12:14:07.919Z] 12:14:07 INFO - eip = 0x65c5b2bf esp = 0x0efffb70 ebp = 0x0efffc70 ebx = 0x0000000d
[task 2023-04-20T12:14:07.920Z] 12:14:07 INFO - esi = 0x07218480 edi = 0x0efffb8c
[task 2023-04-20T12:14:07.920Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.920Z] 12:14:07 INFO - 15 nss3.dll!_PR_NativeRunThread(void*) [pruthr.c:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 399 + 0xe]
[task 2023-04-20T12:14:07.920Z] 12:14:07 INFO - eip = 0x71376c24 esp = 0x0efffc78 ebp = 0x0efffc94 ebx = 0x072c6990
[task 2023-04-20T12:14:07.920Z] 12:14:07 INFO - esi = 0x07244580 edi = 0x07244630
[task 2023-04-20T12:14:07.920Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.921Z] 12:14:07 INFO - 16 nss3.dll!pr_root(void*) [w95thred.c:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 139 + 0xe]
[task 2023-04-20T12:14:07.921Z] 12:14:07 INFO - eip = 0x71368a06 esp = 0x0efffc9c ebp = 0x0efffca4 ebx = 0x051132c0
[task 2023-04-20T12:14:07.921Z] 12:14:07 INFO - esi = 0x07244580 edi = 0x051132c0
[task 2023-04-20T12:14:07.921Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.921Z] 12:14:07 INFO - 17 ucrtbase.dll!thread_start<unsigned int (__stdcall*)(void *),1> + 0x42
[task 2023-04-20T12:14:07.922Z] 12:14:07 INFO - eip = 0x76de59d3 esp = 0x0efffcac ebp = 0x0efffcdc ebx = 0x051132c0
[task 2023-04-20T12:14:07.922Z] 12:14:07 INFO - esi = 0x713689f0 edi = 0x051132c0
[task 2023-04-20T12:14:07.922Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.922Z] 12:14:07 INFO - 18 kernel32.dll!BaseThreadInitThunk + 0x18
[task 2023-04-20T12:14:07.922Z] 12:14:07 INFO - eip = 0x76577d69 esp = 0x0efffce4 ebp = 0x0efffcec ebx = 0x051132c0
[task 2023-04-20T12:14:07.923Z] 12:14:07 INFO - esi = 0x713689f0 edi = 0x051132c0
[task 2023-04-20T12:14:07.923Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.923Z] 12:14:07 INFO - 19 mozglue.dll!mozilla::interceptor::FuncHook<mozilla::interceptor::WindowsDllInterceptor<mozilla::interceptor::VMSharingPolicyShared>,void (*)(int, void *, void *) __attribute__((fastcall))>::operator()(int&, void*&, void*&) const [nsWindowsDllInterceptor.h:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 150]
[task 2023-04-20T12:14:07.924Z] 12:14:07 INFO - Found by: inlining
[task 2023-04-20T12:14:07.924Z] 12:14:07 INFO - 20 mozglue.dll!patched_BaseThreadInitThunk(int, void*, void*) [WindowsDllBlocklist.cpp:763795f1e574f52d5b52e1b756bf8e91cfa859c8 : 592 + 0xa]
[task 2023-04-20T12:14:07.924Z] 12:14:07 INFO - eip = 0x7117d667 esp = 0x0efffcf4 ebp = 0x0efffd20 ebx = 0x051132c0
[task 2023-04-20T12:14:07.924Z] 12:14:07 INFO - esi = 0x713689f0 edi = 0x051132c0
[task 2023-04-20T12:14:07.924Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.925Z] 12:14:07 INFO - 21 ntdll.dll!__RtlUserThreadStart + 0x2a
[task 2023-04-20T12:14:07.925Z] 12:14:07 INFO - eip = 0x7709bb9b esp = 0x0efffd28 ebp = 0x0efffd78 ebx = 0x051132c0
[task 2023-04-20T12:14:07.925Z] 12:14:07 INFO - esi = 0x76577d50 edi = 0x76de5990
[task 2023-04-20T12:14:07.925Z] 12:14:07 INFO - Found by: call frame info
[task 2023-04-20T12:14:07.925Z] 12:14:07 INFO - 22 ntdll.dll!_RtlUserThreadStart + 0x1a
[task 2023-04-20T12:14:07.926Z] 12:14:07 INFO - eip = 0x7709bb1f esp = 0x0efffd80 ebp = 0x0efffd88 ebx = 0x051132c0
[task 2023-04-20T12:14:07.926Z] 12:14:07 INFO - esi = 0x76577d50 edi = 0x76de5990
[task 2023-04-20T12:14:07.926Z] 12:14:07 INFO - Found by: call frame info
| Comment hidden (Intermittent Failures Robot) |
Comment 2•2 years ago
|
||
First occurrence so far, on mozilla-central, in this range of retriggers and backfills
Dana, is there any chance this failure was caused by https://hg.mozilla.org/mozilla-central/rev/3155d983a779ff98645129c066353f3204786f4c ?
Thank you.
Comment 3•2 years ago
|
||
Yes, that line was added in that patch. Kershaw - does this indicate a bug somewhere else? Or maybe the assertion isn't always true?
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 5•2 years ago
|
||
(In reply to Dana Keeler (she/her) (use needinfo) (:keeler for reviews) from comment #3)
Yes, that line was added in that patch. Kershaw - does this indicate a bug somewhere else? Or maybe the assertion isn't always true?
Sorry for the delay.
Yes, that assertion is not always true because we could create a backup connection for fallback connection.
I assume we just need to update that assertion.
| Assignee | ||
Updated•2 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Comment 8•2 years ago
|
||
From bug 1832160 comment 0:
I can consistently hit this assert by focusing the location bar, typing addons, and hitting the right-arrow key.
| Assignee | ||
Comment 9•2 years ago
|
||
Updated•2 years ago
|
Comment 10•2 years ago
|
||
Comment 11•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Comment 12•2 years ago
|
||
The patch landed in nightly and beta is affected.
:kershaw, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox114towontfix.
For more information, please visit BugBot documentation.
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Updated•2 years ago
|
Description
•