Bug 1829169 - Clear IS_SPECULATIVE_CONNECTION for backup connection, r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D177609